# faust-demo

./: .gitignore  Dockerfile  Makefile  README.md  Tiltfile  docker-compose.yml  pyproject.toml  run.sh  wait_for_services.sh
deployment/: faustdemo-values.yml  kafka-values.yaml  kafka-values.yml  namespace-values.yml
deployment/faustdemo/: Chart.yaml  README.md  values.yaml
deployment/faustdemo/templates/: _helpers.tpl  faustdemo-pod.yaml  namespace.yaml
deployment/tilt-namespace/: Chart.yaml  README.md  values.yaml
deployment/tilt-namespace/templates/: namespace.yaml  quota.yaml
faustdemo/: __main__.py  app.py  settings.py
faustdemo/codecs/: codec.py
faustdemo/page_views/: __init__.py  agents.py  models.py  sinks.py  views.py
tests/: test_page_views.py
