[tool.poetry]
name = "faustdemo"
version = "0.1.0"
description = "Faust cookiecutter project"
authors = ["John Roach <johnroach1985@gmail.com>"]

[tool.poetry.scripts]
faustdemo = "faustdemo.app:main"

[tool.poetry.dependencies]
python = "^3.7"
faust = {version = "^1.8", extras = ["uvloop", "fast", "redis", "statsd", "datadog"]}
simple_settings = "^0.18.0"

[tool.poetry.dev-dependencies]
faust = {version = "^1.8", extras = ["debug", "uvloop", "fast", "redis", "statsd", "datadog"]}
pylint = "^2.4.2"
black = "^19.3b0"
pytest = "^5.2"
pytest-asyncio = "^0.10.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
